[project]
name = "api-utils-lab"
version = "0.1.0"
description = "Lightweight Python utilities for working with APIs"
authors = [{name = "Mike"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
